# respiratory_classification

./: README.md  pyproject.toml
notebooks/: SWEETVIZ_REPORT.html  Untitled (1).ipynb  aula_07_06_2023.ipynb  aula_17_05_2023_cds.ipynb  notebook.ipynb
