[tool.poetry]
name = "respiratory_classification"
version = "0.1.0"
description = ""
authors = ["dbcordeiro"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.0.3"
seaborn = "0.12.2"
matplotlib = "3.8.0"
sklearn = "^0.0.post10"
category-encoders = "^2.6.2"
feature-engine = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
